[package]
name = "interphlix-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.28"
serde = {version = "1.0", features = ["derive"]}
static_init = "1.0.3"
reqwest = "0.11.20"